Updated website design and features

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,8 +96,9 @@ new Chart(ctx, {
 
         <div class="footer-col">
             <h4>Contact</h4>
-            <p>Email: tkla3006@gmail.com</p>
-            <p>Phone: +91-8329477163</p>
+            <p>Email: info.tkla@gmail.com</p>
+            <p>Phone: +91-7083564771</p>
+            <p> Chhatrapati Sambhajinagar</p>
             <p>Maharashtra, India</p>
         </div>
     </div>
