--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,8 +16,8 @@
 
         <div class="contact-info">
             <h2>Get In Touch</h2>
-            <p><strong>Email:</strong> tkla3006@gmail.com</p>
-            <p><strong>Phone:</strong> +91-8329477163</p>
+            <p><strong>Email:</strong> info.tkla@gmail.com</p>
+            <p><strong>Phone:</strong> +91-7083564771</p>
             <p><strong>Location:</strong> Chhatrapati Sambhajinagar, Maharashtra, India</p>
         </div>
 
