--- a/templates/services.html
+++ b/templates/services.html
@@ -7,7 +7,7 @@
 <section class="page-header">
     <div class="container">
         <h1>Our Services</h1>
-        <p>Industrial Automation, Robotics, IoT, Installation, Maintenance & Training</p>
+        <p>Industrial Automation, Robotics, IoT, Installation, Maintenance & Training Programs</p>
     </div>
 </section>
 <div class="container">
